log
vi., 13 de may. de 2022 11:31:36: 
 tests:  0|5
total_score: 0/70
c4582cc
vi., 13 de may. de 2022 11:32:09: 
 sudoku.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
 tests:  0|5
total_score: 0/70
94ca579
vi., 13 de may. de 2022 11:34:17: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
915103a
vi., 13 de may. de 2022 11:35:23: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
8254915
vi., 13 de may. de 2022 11:36:55: 
 sudoku.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
7c95aaf
vi., 13 de may. de 2022 11:37:37: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 5/70
9941c1a
vi., 13 de may. de 2022 11:50:41: 
 sudoku.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
test.c: In function 'is_valid':
test.c:245:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
 }
 ^
test.c:262:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
At top level:
test.c:245:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:7:8: error: '_strdup' defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
13d33d3
vi., 13 de may. de 2022 11:54:43: 
 sudoku.c | 11 +++++------
 1 file changed, 5 insertions(+), 6 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:48:14: error: expected ';' before '{' token
 print_node(n){
              ^
test.c: In function 'adj_test1':
test.c:62:17: error: implicit declaration of function 'get_adj_nodes' [-Werror=implicit-function-declaration]
     List* adj = get_adj_nodes(initial);
                 ^~~~~~~~~~~~~
test.c:62:17: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
test.c:76:17: error: 'msg' undeclared (first use in this function)
         sprintf(msg, "primer nodo %d %d %d... (deberia ser 5 3 1...)",aux->sudo[0][0],aux->sudo[0][1],aux->sudo[0][2]);
                 ^~~
test.c:76:17: note: each undeclared identifier is reported only once for each function it appears in
test.c:95:9: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
     adj = get_adj_nodes(initial);
         ^
test.c: In function 'test_mod_adj':
test.c:155:17: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
     List* adj = get_adj_nodes(initial);
                 ^~~~~~~~~~~~~
test.c:157:17: error: 'msg' undeclared (first use in this function)
         sprintf(msg,"la lista deberia tener tamanno 3 pero tiene tamanno %d",get_size(adj));
                 ^~~
test.c: In function 'test_isfinal':
test.c:180:8: error: implicit declaration of function 'is_final' [-Werror=implicit-function-declaration]
     if(is_final(initial)){
        ^~~~~~~~
test.c: In function 'test_dfs':
test.c:206:19: error: implicit declaration of function 'DFS' [-Werror=implicit-function-declaration]
     Node* final = DFS(initial, &cont);
                   ^~~
test.c:206:19: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
test.c:230:11: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
     final = DFS(initial, &cont);
           ^
test.c: In function 'is_valid':
test.c:245:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
 }
 ^
In file included from test.c:5:0:
sudoku.c:47:5: error: unused variable 'num' [-Werror=unused-variable]
 int num;
     ^~~
test.c:262:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
At top level:
test.c:245:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
7e39aae
vi., 13 de may. de 2022 11:56:49: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|4
total_score: 25/70
960b995
vi., 13 de may. de 2022 11:58:18: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|3
total_score: 35/70
77dfb78
vi., 13 de may. de 2022 11:59:06: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
0c8a3ea
vi., 13 de may. de 2022 11:59:23: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
0a293f2
vi., 13 de may. de 2022 12:02:10: 
 sudoku.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  5|3
total_score: 35/70
2fdafef
vi., 13 de may. de 2022 12:02:36: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:64:17: error: unused variable 'j' [-Werror=unused-variable]
             int j=3*(k%3) + (p%3) ;
                 ^
sudoku.c:63:17: error: unused variable 'i' [-Werror=unused-variable]
             int i=3*(k/3) + (p/3) ;
                 ^
cc1.exe: all warnings being treated as errors
Compilation failed
b764a82
vi., 13 de may. de 2022 12:04:44: 
 sudoku.c | 2 --
 1 file changed, 2 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:64:17: error: unused variable 'j' [-Werror=unused-variable]
             int j=3*(k%3) + (p%3);
                 ^
sudoku.c:63:17: error: unused variable 'i' [-Werror=unused-variable]
             int i=3*(k/3) + (p/3);
                 ^
cc1.exe: all warnings being treated as errors
Compilation failed
f14401c
sá., 14 de may. de 2022 22:01:38: 
 sudoku.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
44bde77
sá., 14 de may. de 2022 22:03:22: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
ab43397
sá., 14 de may. de 2022 22:05:45: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  1|4
total_score: 10/70
bcb69f0
sá., 14 de may. de 2022 22:06:03: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
62b44f5
sá., 14 de may. de 2022 22:14:26: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  1|4
total_score: 10/70
f1b78fb
sá., 14 de may. de 2022 22:15:58: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
eed09e1
sá., 14 de may. de 2022 23:02:53: 
 sudoku.c | 29 +++++++++++++++++++++--------
 1 file changed, 21 insertions(+), 8 deletions(-)
 tests:  1|4
total_score: 10/70
9345b40
sá., 14 de may. de 2022 23:03:34: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file a.out: Invalid argument
collect2.exe: error: ld returned 1 exit status
Compilation failed
e7b7ff0
sá., 14 de may. de 2022 23:05:46: 
 sudoku.c | 22 ++--------------------
 1 file changed, 2 insertions(+), 20 deletions(-)
 tests:  3|3
total_score: 25/70
ffd6bf3
sá., 14 de may. de 2022 23:06:37: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
fa6b67e
sá., 14 de may. de 2022 23:07:08: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
3cfa8d4
